# StaringContest

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  Game.hpp  Main.cpp  Score.hpp  ScoreLoader.cpp  ScoreLoader.hpp  WelcomeScreen.hpp  main.cpp
